# danio-python-tools

./: .gitignore  LICENSE  README.md  paper.md  setup.py
03_scripts/01_behaviour/: 01_Visualize responses on a 96 wellplate.ipynb  02_Visualize movements for each well-plate.ipynb  03_Clustering wells according to measurements.ipynb  04_Visualize_distribution.ipynb
daniopoint/: __init__.py  __main__.py  visualization_functions.py
daniopoint-py/: pyproject.toml
daniopoint-py/src/: configure.toml
daniopointpy/: README.md  main.py  pyproject.toml  requirements.txt  testdata_metadata.json
daniopointpy/daniopointpy/: __main__.py  data_management.py  dose_response.py  metadata_utility.py  visualization_functions.py
daniopointpy/test/: .~lock.testdata.xlsx#  DR_test.txt  output.csv  output.txt
jupyter/: 01_Visualize responses on a 96 wellplate.ipynb  02_Visualize movements for each well-plate.ipynb  03_Clustering wells according to measurements.ipynb  04_Visualize_distribution.ipynb  JN-Metadata extraction.ipynb  JN-Visualization Functions.ipynb
knime/: KNIME-danio-python-tools-heatmap.knwf
test/: testdata.xlsx  treatments.xlsx
