# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daniopointpy"
version = "0.9.0"
description = "Read te README.md"
readme = "README.md"
authors = [{ name = "Riccardo Massei", email = "riccardo.massei@ufz.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["behaviour", "analysis", "ViewPoint", "zebrafish"]
dependencies = [
"pandas~=2.1.4",
"matplotlib~=3.8.2",
"numpy~=1.26.2",
"openpyxl~=3.1.2",
"seaborn~=0.13.0",
"statsmodels~=0.14.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["None"]

[project.urls]
Homepage = "https://github.com/rmassei/danio-python-tools"

[project.scripts]
daniopoint-py = "src.__main__:main"

